out/production/Homework_Playground/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <formula>Monthly_Revenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_ppp__c</fullName>
        <label>Annual Revenue_ppp</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monkey_Image__c</fullName>
        <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0682w0000008XBH&amp;operationContext=CHATTER&amp;contentId=05T2w0000004RD7&quot;, &quot;monkey&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monkey Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Monthly_Revenue__c</field>
            <operation>greaterOrEqual</operation>
            <value>10000</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Shop__c.Web_Shop</value>
        </filters>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Shop</fullName>
        <active>true</active>
        <label>Web Shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Director__c )</errorConditionFormula>
        <errorDisplayField>Director__c</errorDisplayField>
        <errorMessage>The shop should have a director</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Revenue_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Monthly Revenue should be more then 0</errorMessage>
    </validationRules>
</CustomObject>